<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.mingc.ee7350_algorithm_project.views.DiskView
        android:id="@+id/disk_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        custom:isCreated="true"
        android:background="@color/White"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <Button
                android:id="@+id/result_bipartitePoints"
                android:text="@string/bipartite_points"
                android:textAllCaps="false"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/result_colorset1"
                android:text="@string/color_1"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/result_colorset2"
                android:text="@string/color_2"
                android:layout_weight="1"
                />

        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/result_bipartiteEdges"
                android:text="@string/bipartite_edges"
                android:textAllCaps="false"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/result_backbone"
                android:text="@string/backbone"
                android:textAllCaps="false"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/result_backbone_edge"
                android:text="@string/backbone_edges"
                android:textAllCaps="false"
                android:layout_weight="1"
                />

        </TableRow>

    </TableLayout>





</LinearLayout>