<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.example.mingc.ee7350_algorithm_project.views.SqaureView
            android:id="@+id/sqaure_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="3dp"
            android:background="@color/Black" />

        <Button
            android:id="@+id/next_step_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_step"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/vertices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/of_vertices"
                android:layout_alignParentLeft="true"
                android:textSize="@dimen/standard_text_size"
                />
            <TextView
                android:id="@+id/num_of_vertices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/standard_text_size"
                android:layout_toRightOf="@id/vertices"
                />

            <TextView
                android:id="@+id/num_of_edges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/standard_text_size"
                android:layout_alignParentRight="true"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/num_of_edges"
                android:text="@string/of_edges"
                android:textSize="@dimen/standard_text_size"
                />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/maxDegree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/of_max_degree"
                android:layout_alignParentLeft="true"
                android:textSize="@dimen/standard_text_size"
                />
            <TextView
                android:id="@+id/num_of_maxDegree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/standard_text_size"
                android:layout_toRightOf="@id/maxDegree"
                />

            <TextView
                android:id="@+id/num_of_minDegree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/standard_text_size"
                android:layout_alignParentRight="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/num_of_minDegree"
                android:text="@string/of_min_degree"
                android:textSize="@dimen/standard_text_size"
                />



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/degree_when_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree_when_delete"
                android:layout_alignParentLeft="true"
                android:textSize="@dimen/small_text_size"
                />
            <TextView
                android:id="@+id/degree_when_delete_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/standard_text_size"
                android:layout_toRightOf="@id/degree_when_delete"
                />

            <TextView
                android:id="@+id/original_degree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/standard_text_size"
                android:layout_alignParentRight="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/original_degree"
                android:text="Original Degree: "
                android:textSize="@dimen/small_text_size"
                />

        </RelativeLayout>

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset"/>

    </LinearLayout>

</ScrollView>
