<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <com.example.mingc.ee7350_algorithm_project.views.SqaureView
        android:id="@+id/sqaure_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        custom:isCreated="true"
        android:background="@color/Black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="The displaying speed is :"
            android:textSize="@dimen/standard_text_size"
            />

        <TextView
            android:id="@+id/square_activity_speed_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/standard_text_size"
            android:layout_marginLeft="@dimen/small_left_margin"
            android:text="0"
            />

    </LinearLayout>


    <SeekBar
        android:id="@+id/square_activity_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarSize="100sp"
        android:layout_weight="1"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TableRow>

        <Button
            android:id="@+id/display_activity_drawPoint_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/draw_points"
            android:textAllCaps="false"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/display_activity_drawEdge_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/draw_edges"
            />
        <Button
            android:id="@+id/display_activity_color_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/color"
            />
        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/display_activity_toResultBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textAllCaps="false"
        />


    </LinearLayout>

</ScrollView>